--- a/src/assets/css/section/footer.css
+++ b/src/assets/css/section/footer.css
@@ -30,8 +30,8 @@
 .footer__info .left .title:hover {
     background-color: #b6b2b2;
     padding-left: 10px;
-    border-color: transparent;                                                                                     0
-} 
+    border-color: transparent;    
+}                                                                                 
 .footer__info .desc {
     margin-top: 10px;
 }
